fix:change enums implementation
